added signup functionality

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -35,7 +35,15 @@
         <input id="username" name="username" type="text">
         <label for="password">Password:</label>
         <input id="password" name="password" type="password">
+        <div id="signup-only" style="display:none">
+        	<label for="first-name" >First Name:</label>
+        	<input id="first-name" name="first-name" type="text">
+        	<label for="last-name" >First Name:</label>
+        	<input id="last-name" name="last-name" type="text" >
+		</div>
         <button id="login-btn">Login</button>
+        <button id="signup-btn">Sign Up</button>
+        <button style="display:none" id="submit-btn">Submit</button>
         <p id="login-error"></p>
       </div>
 
@@ -83,15 +91,15 @@
     <ul>
       <li>
         <p><i class="fa fa-map-o fa-2x"></i></p>
-        <p>LaiOffer office, CA</p>
+        <p></p>
       </li>
       <li>
         <p><i class="fa fa-envelope-o fa-2x"></i></p>
-        <p>info@laioffer.com</p>
+        <p></p>
       </li>
       <li>
         <p><i class="fa fa-phone fa-2x"></i></p>
-        <p>+1 800 123 456</p>
+        <p></p>
       </li>
     </ul>
   </footer>
