--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Item Recommendation">
+  <meta name="description" content="Event Recommendation">
   <meta name="author" content="Your Name">
-  <title>Event Finder</title>
+  <title>Event For You</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/main.css">
@@ -24,8 +24,8 @@
   <div class="container">
     <header>
       <p>
-        <span>Item</span>
-        <br /> Recommendation
+        <span>Event</span>
+        <br /> For You
       </p>
     </header>
 
@@ -90,15 +90,15 @@
     <p>"Help you find the best place around."</p>
     <ul>
       <li>
-        <p><i class="fa fa-map-o fa-2x"></i></p>
+        <p><i class="fa fa-map-o fa-2x"></i></p><p>USC</p>
         <p></p>
       </li>
       <li>
-        <p><i class="fa fa-envelope-o fa-2x"></i></p>
+        <p><i class="fa fa-envelope-o fa-2x"></i></p><p>kaiyuany@usc.edu</p>
         <p></p>
       </li>
       <li>
-        <p><i class="fa fa-phone fa-2x"></i></p>
+        <p><i class="fa fa-phone fa-2x"></i></p><p>+1 213-292-3255</p>
         <p></p>
       </li>
     </ul>
